--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -228,6 +228,11 @@ a:hover {
   padding: 30px 0 35px 0;
 }
 
+#head box2 {
+  background-color: rgba(1,1,1,.5);
+  color: #fff;
+}
+
 #head img {
   display: block;
   width: 140px;
