--- a/layouts/partials/head/header.html
+++ b/layouts/partials/head/header.html
@@ -1,11 +1,12 @@
 <header id="header">
   <div id="head" class="parallax" data-parallax-speed="2" style="background-image:url('{{ .Site.BaseURL }}{{ .Site.Params.banner }}');">
     <h1 id="logo" class="text-center">
+      <span class="box box2">
       <img class='img-{{ .Site.Params.avatarclass | default "circle"}}' src="{{ .Site.BaseURL }}{{ .Site.Params.avatar }}" alt="">
       <span class="title">{{ .Site.Params.name }}</span>
       <span class="tagline">{{ .Site.Params.description }}<br>
-        <a href="mailto:{{ .Site.Params.email }}">{{ .Site.Params.email }}</a>
       </span>
+    </span>
    </h1>
 </div>
 
